added <h1> and <p> to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ggasdgasdgasdgasdgsadgasdgasdga</title>
 </head>
 <body>
-    
+    <h1>My Name</h1>
+    <p>Fahad Saleh</p>
 </body>
 </html>
